Use different REST API specifications - Swagger 2 and OpenApi 3.
(cherry picked from commit df2e8f4effccd1495223495d989b99c524c9e604)
