# microservice3/src/main/java/com/showmeyourcode/spring_cloud/microservice3/api/Microservice3Controller.java
@@ -1,0 +1,9 @@
+package com.showmeyourcode.spring_cloud.microservice3.api;
+
+import org.springframework.web.bind.annotation.RequestMapping;
+
+public interface Microservice3Controller {
+
+    @RequestMapping("api/microservice3")
+    String getMicroserviceName();
+}
